--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -119,7 +119,7 @@
   .tooltip {
     display: inline-block;
   }
-  
+
   .tooltip .tooltiptext {
     visibility: hidden;
     width: 200px;
@@ -130,8 +130,10 @@
     padding: 5px 0;
   
     /* Position the tooltip */
-    position: absolute;
+    position: relative;
     z-index: 1;
+    top: -25px;
+    right: 10%;
   }
   
   .tooltip:hover .tooltiptext {
