--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -1,17 +1,4 @@
 
-.bg {
-  /* The image used */
-  background-image: url('images/classic-close-up-draw-expensive-372748.jpg');
-
-  /* Full height */
-  height: 100%; 
-
-  /* Center and scale the image nicely */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
 #addButton {
   border-radius: 25px;
   background-color: white;
@@ -155,4 +142,34 @@
 
 .tooltip:hover .tooltiptext {
   visibility: visible;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+li {
+  display: inline;
+  border: 1px solid black;
+  background: black;
+  padding:5px;
+  color: white;
+  font-size:30px;
+}
+a {
+	text-decoration:none;
+    color: white;
+    margin:0px;
+}
+li:hover{
+background-color: white;
+color: black;
+}
+a:hover{
+  color: black
+}
+
+hr {
+  border:1px solid black
 }
